--- a/2-3-loja/css/styles.scss
+++ b/2-3-loja/css/styles.scss
@@ -10,6 +10,7 @@
 @import "./components/collections";
 @import "./components/video";
 @import "./components/carousel";
+@import "./components/subscribe";
 @import "./components/footer";
 
 // category page
