--- a/1-1-css-buttons-family/styles.css
+++ b/1-1-css-buttons-family/styles.css
@@ -1,8 +1,9 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: Graphik,-apple-system,system-ui,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+    font-family: Graphik, -apple-system, system-ui, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,192 +11,82 @@ html, body {
 
 
 .buttons__wrapper {
-    width: 500px;
     margin: 16px auto;
 }
 
 .d-flex {
     display: flex;
     gap: 12px;
+    margin: 12px 0;
 }
 
+button,
 .btn {
-  appearance: button;
-  background-color: gainsboro;
-  border: 1px solid gainsboro;
-  border-radius: 4px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  font-size: 14px;
-  line-height: 1.15;
-  overflow: visible;
-  padding: 12px 16px;
-  position: relative;
-  text-align: center;
-  text-transform: none;
-  transition: all 80ms ease-in-out;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: fit-content;
-  margin: 12px;
-}
-
-.btn:disabled {
-  opacity: .5;
-}
-
-.btn:focus {
-  outline: 0;
-}
-
-.btn:hover {
-  background-color: #0A46E4;
-  border-color: #0A46E4;
+    cursor: pointer;
+    display: inline-flex;
+    gap: 8px;
+    align-items: center;
+    background: gainsboro;
+    border: 0;
+    padding: 8px 12px;
+    border-radius: 2px;
+    letter-spacing: .4px;
 }
 
 .btn:active {
-  background-color: #0039D7;
-  border-color: #0039D7;
+    filter: brightness(0.9)
 }
 
-.btn-small {
-    line-height: 14px;
-    height: 32px;
-    padding: 8px 16px;
+.btn--primary {
+    background: blue;
+    color: white;
 }
 
-/* colors */
-.btn-primary {
-    background-color: #1652F0;
-    border: 1px solid #1652F0;
+.btn--success {
+    background: green;
+    color: white;
 }
 
-.btn-primary:hover {
-    background-color: #0A46E4;
-    border-color: #0A46E4;
-}
-  
-.btn-primary:active {
-    background-color: #0039D7;
-    border-color: #0039D7;
+.btn--warning {
+    background: orange;
+    color: white;
 }
 
-.btn-success {
-    background-color: #14cf3c;
-    border: 1px solid #14cf3c;
+.btn--danger {
+    background: red;
+    color: white;
 }
 
-.btn-success:hover {
-    background-color: #0fb132;
-    border-color: #0fb132;
-}
- 
-.btn-danger {
-    background-color: #cf1414;
-    border: 1px solid #cf1414;
+.btn--small {
+    padding: 4px 8px;
 }
 
-.btn-danger:hover {
-    background-color: #b10f0f;
-    border-color: #b10f0f;
-}
-  
-.btn-danger:active {
-    background-color: #920f0f;
-    border-color: #920f0f;
-}
-
- 
-.btn-warning {
-    background-color: #dbac2b;
-    border: 1px solid #dbac2b;
-}
-
-.btn-warning:hover {
-    background-color: #b68f23;
-    border-color: #b68f23;
-}
-  
-.btn-warning:active {
-    background-color: #d9752d;
-    border-color: #d9752d;
-}
-
-
-
-
-
-/* colors */
-.btn-outline {
+.btn--outline {
+    border: 1px solid rgb(145, 145, 145);
+    color: rgb(145, 145, 145);
     background: transparent;
-    color: gainsboro;
-    border: 1px solid gainsboro;
-}
-.btn-outline-primary {
-    background: transparent;
-    color: #1652F0;
-    border: 1px solid #1652F0;
 }
 
-.btn-outline-primary:hover {
+.btn--outline--primary {
+    border: 1px solid blue;
+    color: blue;
     background: transparent;
-    color: #0A46E4;
-    border-color: #0A46E4;
-}
-  
-.btn-outline-primary:active {
-    background: transparent;
-    color: #0039D7;
-    border-color: #0039D7;
 }
 
-.btn-outline-success {
+.btn--outline--success {
+    border: 1px solid green;
+    color: green;
     background: transparent;
-    color: #14cf3c;
-    border: 1px solid #14cf3c;
 }
 
-.btn-outline-success:hover {
+.btn--outline--warning {
+    border: 1px solid orange;
+    color: orange;
     background: transparent;
-    color: #0fb132;
-    border-color: #0fb132;
-}
- 
-.btn-outline-danger {
-    background: transparent;
-    color: #cf1414;
-    border: 1px solid #cf1414;
 }
 
-.btn-outline-danger:hover {
+.btn--outline--danger {
+    border: 1px solid red;
+    color: red;
     background: transparent;
-    color: #b10f0f;
-    border-color: #b10f0f;
-}
-  
-.btn-outline-danger:active {
-    background: transparent;
-    color: #920f0f;
-    border-color: #920f0f;
-}
-
- 
-.btn-outline-warning {
-    background: transparent;
-    color: #dbac2b;
-    border: 1px solid #dbac2b;
-}
-
-.btn-outline-warning:hover {
-    background: transparent;
-    color: #b68f23;
-    border-color: #b68f23;
-}
-  
-.btn-outline-warning:active {
-    background: transparent;
-    color: #d9752d;
-    border-color: #d9752d;
 }
