--- a/2-3-loja/css/partials/_typography.scss
+++ b/2-3-loja/css/partials/_typography.scss
@@ -28,7 +28,7 @@ h2,
 h3,
 h4,
 h5 {
-	margin: 3rem 0 1.38rem;
+	margin: 0 0 1rem 0;
 	font-family: "IBM Plex Sans", sans-serif;
 	font-weight: 400;
 	line-height: 1.3;
