--- a/examples/relative-sizes/reset.css
+++ b/examples/relative-sizes/reset.css
@@ -1,10 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-
-* {
-    box-sizing: border-box;
-    font-family: 'Lato', serif;
-}
-
 html,
 body,
 div,
@@ -89,7 +82,7 @@ video {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 14px;
+    font-size: 100%;
     font: inherit;
     vertical-align: baseline;
 }
