--- a/exercises/1-6-newspaper-cover/grid.css
+++ b/exercises/1-6-newspaper-cover/grid.css
@@ -1,77 +1,48 @@
-/* grid */
-.grid,
-.row {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 16px;
-    margin-bottom: 12px;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    background: #ccc;
 }
 
-[class*="col-"] {
-    height: 100%;
-    margin-bottom: 6px;
+.headline {
+    min-height: 200px;
 }
 
-.col-1 {
-    grid-column: span 1 / span 1;
-}
-
-.col-2 {
-    grid-column: span 2 / span 2;
-}
-
-.col-3 {
-    grid-column: span 3 / span 3;
-}
-
-.col-4 {
-    grid-column: span 4 / span 4;
-}
-
-.col-5 {
-    grid-column: span 5 / span 5;
-}
-
-.col-6 {
-    grid-column: span 6 / span 6;
-}
-
-.col-7 {
-    grid-column: span 7 / span 7;
-}
-
-.col-8 {
-    grid-column: span 8 / span 8;
-}
-
-.col-9 {
-    grid-column: span 9 / span 9;
-}
-
-.col-10 {
-    grid-column: span 10 / span 10;
-}
-
-.col-11 {
-    grid-column: span 11 / span 11;
-}
-
-.col-12 {
-    grid-column: span 12 / span 12;
-}
-
-.flex {
+.navigation .navigation__links {
     display: flex;
-}
-
-.flex-col {
-    flex-direction: column;
-}
-
-.flex-justify-between {
-    justify-content: space-between;
-}
-
-.gap-16 {
+    list-style: none;
     gap: 16px;
+    justify-content: center;
+    padding: 16px 0;
+    border-top: 1px solid gainsboro;
+    border-bottom: 1px solid gainsboro;
+}
+
+.newspaper {
+    width: 1000px;
+    margin: 0 auto;
+    padding: 0 40px;
+    background: white;
+    box-sizing: border-box;
+}
+
+.main {
+    display: grid;
+    grid-template-columns: 6fr 3fr 3fr;
+
+
+}
+
+.secondary {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 8px;
+
+}
+
+.middle {
+    display: grid;
+    grid-template-columns: 2fr 5fr 3fr 2fr;
+
 }
