--- a/exercises/OLD_1-6-newspaper-cover/reset.css
+++ b/exercises/OLD_1-6-newspaper-cover/reset.css
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-
 * {
     box-sizing: border-box;
-    font-family: 'Lato', serif;
 }
 
 html,
@@ -89,7 +86,7 @@ video {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 14px;
+    font-size: 100%;
     font: inherit;
     vertical-align: baseline;
 }
@@ -134,4 +131,21 @@ q:after {
 table {
     border-collapse: collapse;
     border-spacing: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: gainsboro;
+}
+
+a:hover {
+    cursor: pointer;
+}
+
+html {
+    font-size: 12px;
 }
