--- a/examples/responsive-grid/styles.css
+++ b/examples/responsive-grid/styles.css
@@ -1,5 +1,4 @@
 [class*=col-] {
-  border: 0.5px solid gray;
   box-sizing: border-box;
   padding: 8px;
 }
@@ -12,6 +11,15 @@
   gap: 8px;
 }
 
+.d-sm-none {
+  display: block;
+}
+
+@media screen and (max-width: 768px) {
+  .d-sm-none {
+    display: none;
+  }
+}
 .col-lg-1 {
   width: calc(8.3333333333% - 8px);
 }
