--- a/examples/responsive-grid/grid.css
+++ b/examples/responsive-grid/grid.css
@@ -16,6 +16,15 @@
     width: calc(100% - 8px);
 }
 
+
+.col-lg-8 {
+    width: calc(100% / 12 * 8 - 8px);
+}
+
+.col-lg-2 {
+    width: calc(100% / 12 * 2 - 8px);
+}
+
 .col-lg-3 {
     width: calc(100% / 4 - 8px)
 }
