--- a/examples/scss/styles.css
+++ b/examples/scss/styles.css
@@ -1,34 +1,14 @@
 .btn {
-  padding: 8px 0px;
+  padding: 8px 16px;
   border: 0;
-  background: white;
-  display: flex;
-  gap: 8px;
-  align-items: center;
+  border-radius: 4px;
 }
-
 .btn:hover {
   cursor: pointer;
 }
-.btn--icon {
-  width: 10px;
-  height: 10px;
-}
 
-.btn-primary {
-  color: blue;
-}
-
-.btn-success {
-  color: green;
-}
-
-.btn-warning {
-  color: orange;
-}
-
-.btn-danger {
-  color: red;
+.btn--success {
+  background: green;
 }
 
 [class*=col-] {
@@ -114,4 +94,53 @@
   .col-lg-12 {
     width: calc(100% - 8px);
   }
+}
+@media screen and (max-width: 768px) {
+  .col-lg-1 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-2 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-3 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-4 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-5 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-6 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-7 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-8 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-9 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-10 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-11 {
+    width: calc(100% - 8px);
+  }
+  .col-lg-12 {
+    width: calc(100% - 8px);
+  }
+}
+.card {
+  display: flex;
+  align-items: center;
+  font-size: 16.8px;
+}
+.card__header {
+  background: white;
+}
+.card__header input {
+  color: pink;
 }/*# sourceMappingURL=styles.css.map */
