--- a/exercises/1-0-css-design-systems/css/common.css
+++ b/exercises/1-0-css-design-systems/css/common.css
@@ -14,6 +14,7 @@ html {
     place-content: center;
     align-items: center;
     border-top: 1px dashed gainsboro;
+    padding: 12px 0;
 }
 
 .sample {
