--- a/templates/1-0-css-design-systems/input.html
+++ b/templates/1-0-css-design-systems/input.html
@@ -16,62 +16,6 @@
 			<p class="title">Simple</p>
 			<div class="sample">
 				<!-- Código aqui -->
-
-				<!-- Simple -->
-				<div class="form_field">
-					<label for="" class="form_field__label">Field Label</label>
-					<div class="form_field__wrapper">
-						<input type="text" class="form_field__input" placeholder="Placeholder" />
-					</div>
-					<small class="form_field__error">Error Label</small>
-				</div>
-
-				<div class="form_field">
-					<label for="" class="form_field__label">Field Label</label>
-					<div class="form_field__wrapper">
-						<svg
-							class="form__field__icon"
-							width="16"
-							height="16"
-							viewBox="0 0 16 16"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M15.2609 13.9378L11.1378 9.84551C11.9686 8.67628 12.3994 7.19936 12.184 5.63013C11.8147 2.98397 9.6609 0.891666 6.98398 0.645513C3.35321 0.276282 0.276287 3.35321 0.645518 7.01474C0.891672 9.6609 2.98398 11.8455 5.63013 12.2147C7.19936 12.4301 8.67629 11.9994 9.84552 11.1686L13.9378 15.2609C14.1224 15.4455 14.3994 15.4455 14.584 15.2609L15.2301 14.6147C15.4147 14.4301 15.4147 14.1224 15.2609 13.9378ZM2.4609 6.43013C2.4609 4.24551 4.24552 2.4609 6.43013 2.4609C8.61475 2.4609 10.3994 4.24551 10.3994 6.43013C10.3994 8.61474 8.61475 10.3994 6.43013 10.3994C4.24552 10.3994 2.4609 8.64551 2.4609 6.43013Z"
-								fill="#B0ADAB"
-							/>
-						</svg>
-
-						<input type="text" class="form_field__input" placeholder="Placeholder" />
-					</div>
-					<small class="form_field__error">Error Label</small>
-				</div>
-
-				<div class="form_field">
-					<label for="" class="form_field__label">Field Label</label>
-					<div class="form_field__wrapper">
-						<input pattern="[A-Za-z]{3}" type="text" class="form_field__input" placeholder="Placeholder" />
-						<svg
-							class="form__field__icon"
-							width="16"
-							height="16"
-							viewBox="0 0 16 16"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M15.2609 13.9378L11.1378 9.84551C11.9686 8.67628 12.3994 7.19936 12.184 5.63013C11.8147 2.98397 9.6609 0.891666 6.98398 0.645513C3.35321 0.276282 0.276287 3.35321 0.645518 7.01474C0.891672 9.6609 2.98398 11.8455 5.63013 12.2147C7.19936 12.4301 8.67629 11.9994 9.84552 11.1686L13.9378 15.2609C14.1224 15.4455 14.3994 15.4455 14.584 15.2609L15.2301 14.6147C15.4147 14.4301 15.4147 14.1224 15.2609 13.9378ZM2.4609 6.43013C2.4609 4.24551 4.24552 2.4609 6.43013 2.4609C8.61475 2.4609 10.3994 4.24551 10.3994 6.43013C10.3994 8.61474 8.61475 10.3994 6.43013 10.3994C4.24552 10.3994 2.4609 8.64551 2.4609 6.43013Z"
-								fill="#B0ADAB"
-							/>
-						</svg>
-					</div>
-					<small class="form_field__error">Error Label</small>
-				</div>
 			</div>
 		</div>
 
@@ -79,59 +23,6 @@
 			<p class="title">Without Label</p>
 			<div class="sample">
 				<!-- Código aqui -->
-
-				<!-- Simple -->
-				<div class="form_field">
-					<div class="form_field__wrapper">
-						<input type="text" class="form_field__input" placeholder="Placeholder" />
-					</div>
-					<small class="form_field__error">Error Label</small>
-				</div>
-
-				<div class="form_field">
-					<div class="form_field__wrapper">
-						<svg
-							class="form__field__icon"
-							width="16"
-							height="16"
-							viewBox="0 0 16 16"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M15.2609 13.9378L11.1378 9.84551C11.9686 8.67628 12.3994 7.19936 12.184 5.63013C11.8147 2.98397 9.6609 0.891666 6.98398 0.645513C3.35321 0.276282 0.276287 3.35321 0.645518 7.01474C0.891672 9.6609 2.98398 11.8455 5.63013 12.2147C7.19936 12.4301 8.67629 11.9994 9.84552 11.1686L13.9378 15.2609C14.1224 15.4455 14.3994 15.4455 14.584 15.2609L15.2301 14.6147C15.4147 14.4301 15.4147 14.1224 15.2609 13.9378ZM2.4609 6.43013C2.4609 4.24551 4.24552 2.4609 6.43013 2.4609C8.61475 2.4609 10.3994 4.24551 10.3994 6.43013C10.3994 8.61474 8.61475 10.3994 6.43013 10.3994C4.24552 10.3994 2.4609 8.64551 2.4609 6.43013Z"
-								fill="#B0ADAB"
-							/>
-						</svg>
-
-						<input type="text" class="form_field__input" placeholder="Placeholder" />
-					</div>
-					<small class="form_field__error">Error Label</small>
-				</div>
-
-				<div class="form_field">
-					<div class="form_field__wrapper">
-						<input pattern="[A-Za-z]{3}" type="text" class="form_field__input" placeholder="Placeholder" />
-						<svg
-							class="form__field__icon"
-							width="16"
-							height="16"
-							viewBox="0 0 16 16"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M15.2609 13.9378L11.1378 9.84551C11.9686 8.67628 12.3994 7.19936 12.184 5.63013C11.8147 2.98397 9.6609 0.891666 6.98398 0.645513C3.35321 0.276282 0.276287 3.35321 0.645518 7.01474C0.891672 9.6609 2.98398 11.8455 5.63013 12.2147C7.19936 12.4301 8.67629 11.9994 9.84552 11.1686L13.9378 15.2609C14.1224 15.4455 14.3994 15.4455 14.584 15.2609L15.2301 14.6147C15.4147 14.4301 15.4147 14.1224 15.2609 13.9378ZM2.4609 6.43013C2.4609 4.24551 4.24552 2.4609 6.43013 2.4609C8.61475 2.4609 10.3994 4.24551 10.3994 6.43013C10.3994 8.61474 8.61475 10.3994 6.43013 10.3994C4.24552 10.3994 2.4609 8.64551 2.4609 6.43013Z"
-								fill="#B0ADAB"
-							/>
-						</svg>
-					</div>
-					<small class="form_field__error">Error Label</small>
-				</div>
 			</div>
 		</div>
 
@@ -139,60 +30,26 @@
 			<p class="title">Disabled</p>
 			<div class="sample">
 				<!-- Código aqui -->
-
-				<!-- Simple -->
-				<div class="form_field">
-					<div class="form_field__wrapper">
-						<input disabled type="text" class="form_field__input" placeholder="Placeholder" />
-					</div>
-					<small class="form_field__error">Error Label</small>
-				</div>
-
-				<div class="form_field">
-					<div class="form_field__wrapper">
-						<svg
-							class="form__field__icon"
-							width="16"
-							height="16"
-							viewBox="0 0 16 16"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M15.2609 13.9378L11.1378 9.84551C11.9686 8.67628 12.3994 7.19936 12.184 5.63013C11.8147 2.98397 9.6609 0.891666 6.98398 0.645513C3.35321 0.276282 0.276287 3.35321 0.645518 7.01474C0.891672 9.6609 2.98398 11.8455 5.63013 12.2147C7.19936 12.4301 8.67629 11.9994 9.84552 11.1686L13.9378 15.2609C14.1224 15.4455 14.3994 15.4455 14.584 15.2609L15.2301 14.6147C15.4147 14.4301 15.4147 14.1224 15.2609 13.9378ZM2.4609 6.43013C2.4609 4.24551 4.24552 2.4609 6.43013 2.4609C8.61475 2.4609 10.3994 4.24551 10.3994 6.43013C10.3994 8.61474 8.61475 10.3994 6.43013 10.3994C4.24552 10.3994 2.4609 8.64551 2.4609 6.43013Z"
-								fill="#B0ADAB"
-							/>
-						</svg>
-
-						<input disabled type="text" class="form_field__input" placeholder="Placeholder" />
-					</div>
-					<small class="form_field__error">Error Label</small>
-				</div>
-
-				<div class="form_field">
-					<div class="form_field__wrapper">
-						<input disabled pattern="[A-Za-z]{3}" type="text" class="form_field__input" placeholder="Placeholder" />
-						<svg
-							class="form__field__icon"
-							width="16"
-							height="16"
-							viewBox="0 0 16 16"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M15.2609 13.9378L11.1378 9.84551C11.9686 8.67628 12.3994 7.19936 12.184 5.63013C11.8147 2.98397 9.6609 0.891666 6.98398 0.645513C3.35321 0.276282 0.276287 3.35321 0.645518 7.01474C0.891672 9.6609 2.98398 11.8455 5.63013 12.2147C7.19936 12.4301 8.67629 11.9994 9.84552 11.1686L13.9378 15.2609C14.1224 15.4455 14.3994 15.4455 14.584 15.2609L15.2301 14.6147C15.4147 14.4301 15.4147 14.1224 15.2609 13.9378ZM2.4609 6.43013C2.4609 4.24551 4.24552 2.4609 6.43013 2.4609C8.61475 2.4609 10.3994 4.24551 10.3994 6.43013C10.3994 8.61474 8.61475 10.3994 6.43013 10.3994C4.24552 10.3994 2.4609 8.64551 2.4609 6.43013Z"
-								fill="#B0ADAB"
-							/>
-						</svg>
-					</div>
-					<small class="form_field__error">Error Label</small>
-				</div>
 			</div>
 		</div>
 	</body>
 </html>
+
+<!-- 
+	ICON
+ -->
+<!-- <svg
+	class="form__field__icon"
+	width="16"
+	height="16"
+	viewBox="0 0 16 16"
+	fill="none"
+	xmlns="http://www.w3.org/2000/svg"
+>
+	<path
+		fill-rule="evenodd"
+		clip-rule="evenodd"
+		d="M15.2609 13.9378L11.1378 9.84551C11.9686 8.67628 12.3994 7.19936 12.184 5.63013C11.8147 2.98397 9.6609 0.891666 6.98398 0.645513C3.35321 0.276282 0.276287 3.35321 0.645518 7.01474C0.891672 9.6609 2.98398 11.8455 5.63013 12.2147C7.19936 12.4301 8.67629 11.9994 9.84552 11.1686L13.9378 15.2609C14.1224 15.4455 14.3994 15.4455 14.584 15.2609L15.2301 14.6147C15.4147 14.4301 15.4147 14.1224 15.2609 13.9378ZM2.4609 6.43013C2.4609 4.24551 4.24552 2.4609 6.43013 2.4609C8.61475 2.4609 10.3994 4.24551 10.3994 6.43013C10.3994 8.61474 8.61475 10.3994 6.43013 10.3994C4.24552 10.3994 2.4609 8.64551 2.4609 6.43013Z"
+		fill="#B0ADAB"
+	/>
+</svg> -->
