chore: change atomic example

--- a/examples/atomic-example/style.css
+++ b/examples/atomic-example/style.css
@@ -102,6 +102,20 @@ span {
     font-size: 0.8rem;
 }
 
+.controls {
+    margin: 12px 0;
+    display: flex;
+    gap: 12px;
+}
+
+.controls button {
+    padding: 8px 16px;
+    border: 0;
+    background: rgba(10, 10, 10, 1);
+    color: white;
+    border-radius: 4px;
+}
+
 /* 
 ---------------------------------------------------------------------------------
 Flex Properties
