--- a/templates/1-2-sports-card/styles.css
+++ b/templates/1-2-sports-card/styles.css
@@ -4,144 +4,9 @@
     box-sizing: border-box;
 }
 
-html, body {
-    margin: 0; 
-    padding: 0;
-    font-family: 'IBM Plex Sans', sans-serif;
-}
-
-html {
-    background-image: linear-gradient(285deg, #2314ff, #e30000);
-    background-repeat: no-repeat;
-    min-height: 100vh;
-    min-width: 100vw;
-}
-
-.card {
-    width: 370px;
-    height: 600px;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0px 20px 15px 8px #0000002e, 0px 8px 5px 8px #1c2ec62e;
-    margin: 64px auto;
-    position: relative;
-    border-radius: 12px;
-    animation-name: rotate;
-    animation-iteration-count: infinite;
-    animation-duration: 10s;
-}
-
-.thumbnail {
-    position: absolute;
-    top: 200px;
-    width: 400px;
-    right: -15%;
-}
-
-.card__top {
-    height: 80%;
-    background-image: linear-gradient(45deg, red, #efb415);
-    color: white;
-    padding: 12px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 12px 12px 0 0;
-}
-
-.card__top__header {
-    width: 100%;
-    position: relative;
-    padding: 0 0 12px 0;
-}
-
-.card__logo {
-    width: 50px;
-}
-
-.card__price {
-    font-size: 1.2rem;
-    position: absolute;
-    right: 0;
-}
-
-.card__top__content {
-    font-weight: 300;
-    line-height: 150%;
-    font-size: 0.875rem;
-}
-
-.card__title {
-    font-size: 1.2rem;
-    font-weight: bold;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
-.backdrop__content {
-    font-size: 14rem;
-    letter-spacing: 30px;
+html,
+body {
     margin: 0;
     padding: 0;
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    left: -5%;
-    opacity: .3;
-    font-weight: 800;
-}
-
-.card__bottom {
-    padding: 32px;
-    position: relative; 
-    z-index: 2;
-}
-.btn {
-    background: blue;
-    border: 0;
-    padding: 12px 16px;
-    min-width: 125px;
-    border-radius: 125px;
-    color: white;
-    font-size: 1rem;
-    text-transform: uppercase;
-    letter-spacing: 0.2rem;
-    font-weight: 100;
-    display: block;
-    margin: 0 auto;
-    transition: all .4s;
-}
-
-.btn-outline {
-    background: transparent;
-    border: 2px solid blue;
-    color: blue;
-}
-
-.btn-outline:hover  {
-    background: blue;
-    color: white;
-    cursor: pointer;
-}
-
-.category {
-    font-size: 0.8rem;
-    text-align: center;
-    opacity: .3;
-    text-transform: uppercase;
-    letter-spacing: 8px;
-}
-
-@keyframes rotate {
-    0% {
-        transform: rotate(0)
-    }
-    30% {
-        transform: rotate(5deg)
-    }
-    60% {
-        transform: rotate(-5deg)
-    }
-    100% {
-        transform: rotate(0deg)
-    }  
+    font-family: 'IBM Plex Sans', sans-serif;
 }
