--- a/exercises/2-1-loja/css/styles.scss
+++ b/exercises/2-1-loja/css/styles.scss
@@ -13,5 +13,7 @@
 @import "./components/subscribe";
 @import "./components/footer";
 
+@import "./components/detail";
+
 // category page
 @import "./components/products";
