--- a/common/styles.css
+++ b/common/styles.css
@@ -13,6 +13,8 @@ html {
   font-weight: 300;
   font-style: normal;
   color: #f3f8f2;
+  scroll-behavior: smooth;
+  scroll-padding-top: 200px;
 }
 
 html,
@@ -47,16 +49,19 @@ body::-webkit-scrollbar {
 }
 
 .nav {
-  background: #2d2d2d;
+  background: #0a0a0a;
+  border: 1px solid #2b2b2b;
   height: 64px;
   display: flex;
   align-items: center;
   padding: 0 32px;
   position: sticky;
-  top: 0px;
+  top: 32px;
   z-index: 999;
   width: 50%;
   margin: 0 0 32px auto;
+  gap: 32px;
+  border-radius: 32px;
 }
 
 .presentation {
@@ -170,6 +175,27 @@ body::-webkit-scrollbar {
   color: white;
 }
 
+.section_title {
+  font-size: 32px;
+  margin: 64px 0;
+  position: relative;
+}
+.section_title::after {
+  margin: 32px 0;
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 50%;
+  background: white;
+  display: block;
+  left: -25%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 [data-type=html] {
   transition: all 0.4s;
   border: 1px solid #555555;
@@ -203,13 +229,15 @@ body::-webkit-scrollbar {
 }
 
 .chapter {
-  height: 200px;
+  height: 100px;
   position: sticky;
   top: 150px;
   border: 1px solid #545455;
   flex-grow: 1;
   padding: 12px;
   background: #2b2a2e;
+  display: flex;
+  flex-direction: column;
 }
 .chapter:hover {
   cursor: pointer;
@@ -286,4 +314,87 @@ body::-webkit-scrollbar {
 }
 .article_card:hover .article_card__category {
   opacity: 1;
+}
+
+/* Presentations */
+.presentations {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 12px;
+}
+
+/* Exercices */
+.exercises {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  gap: 12px;
+}
+
+.presentation_card {
+  position: relative;
+  width: 300px;
+  aspect-ratio: 16/9;
+  display: inline-block;
+  background: #222;
+  border-radius: 8px;
+  border: 4px solid;
+  border-image-slice: 1;
+  text-decoration: none;
+  display: flex;
+  align-items: flex-end;
+  transition: all 0.4s;
+  padding: 12px;
+  line-height: 150%;
+  border-image-source: conic-gradient(hsl(100, 100%, 60%), hsl(200, 100%, 60%), hsl(100, 100%, 60%));
+}
+
+.presentation_card::before {
+  content: attr(data-type);
+  color: white;
+  position: absolute;
+  top: 12px;
+  opacity: 0;
+  z-index: 3;
+  left: 12px;
+  width: 100%;
+  height: 20px;
+  transition: all 0.4s;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 0.5px;
+}
+
+.presentation_card::after {
+  content: attr(data-exercise);
+  color: white;
+  position: absolute;
+  bottom: 8px;
+  opacity: 0;
+  z-index: 3;
+  right: 8px;
+  transition: all 0.4s;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 2px;
+  writing-mode: tb-rl;
+  display: block;
+}
+
+.presentation_card:hover::before,
+.presentation_card:hover::after {
+  opacity: 1;
+}
+
+.presentation_card:hover {
+  border-bottom-width: 50px;
+  background: #323131;
+}
+
+.presentation_card__title {
+  color: white;
+  font-size: 1rem;
+  width: 80%;
+  display: block;
 }/*# sourceMappingURL=styles.css.map */
