add: first-class

--- a/common/styles.css
+++ b/common/styles.css
@@ -248,6 +248,10 @@ a {
     margin-top: 0 !important;
   }
 }
+.chapter[disabled] {
+  opacity: 0.4;
+  pointer-events: none;
+}
 
 .chapter:nth-child(1) {
   margin-top: 100px;
@@ -397,4 +401,11 @@ a {
   font-size: 1rem;
   width: 80%;
   display: block;
+}
+
+/* ---------------------------------------------------------------------
+------------------------------------------------------------------------
+--------------------------------------------------------------------- */
+.template {
+  background: #161616;
 }/*# sourceMappingURL=styles.css.map */
