--- a/common/styles.scss
+++ b/common/styles.scss
@@ -244,6 +244,10 @@ a {
 		height: 75px;
 		margin-top: 0 !important;
 	}
+	&[disabled] {
+		opacity: 0.4;
+		pointer-events: none;
+	}
 }
 .chapter:nth-child(1) {
 	margin-top: (100px * 1);
@@ -392,4 +396,12 @@ a {
 	font-size: 1rem;
 	width: 80%;
 	display: block;
+}
+
+/* ---------------------------------------------------------------------
+------------------------------------------------------------------------
+--------------------------------------------------------------------- */
+
+.template {
+	background: #161616;
 }
